major content updates

--- a/culture/idi.html
+++ b/culture/idi.html
@@ -30,7 +30,7 @@
       <!-- BODY -->
       <div id="main-content">
         <div class="main-body">
-          <img src="../img/idilogo.png" id="idi-logo">
+          <img src="../img/idilogo.png" id="idi-logo" alt="the IDI logo, shaped like a globe">
           <h1>Intercultural Development Inventory</h1>
           <p>The <em>Intercultural Development Inventory</em>, usually just called the IDI, is a five-step metric for determining how far along you are in your cultural adjustment within a new cultural context. It's a really helpful tool for recognizing where you've been, understanding where you are now, and look ahead to where you should focus on progressing; I've found it immensely helpful, and I think anyone who interacts with other cultures, regularly or not, will find it very helpful.</p>
           <p>Officially, your place on the inventory is determined through taking an online questionnaire, which isn't free; examining the stages and their descriptions, however, is still a valuable exercise. You may be at the very beginning, or you may find yourself hovering somewhere in the middle—there's no "right" place to start, but looking at all five as falling on a linear spectrum is the most useful way of understanding it.</p>
