--- a/culture/index.html
+++ b/culture/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <link rel="stylesheet" href="../global.css">
+    <link rel="stylesheet" href="index.css">
     <!-- link rel="stylesheet" href="index.css" -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
@@ -29,7 +30,39 @@
       <!-- BODY -->
       <div id="main-content">
         <div class="main-body">
-          <p>Henlo let us discuss culture</p>
+          <img src="../img/flags.png" id="flags" alt="a banner of world flags">
+          <h1>Navigating Culture</h1>
+          <p>Unless you are living your life in an extraordinarily secluded way, odds are you are going to have to interact with people who have a different culture from your own. Whether it be through travel, living or studying abroad, or working with people of different backgrounds,
+            it's highly likely you'll encounter people with different cultural backgrounds. Often, these are incredible opportunities to learn--but they can also lead to confusion and frustration when ideas aren't communicated
+            or assumptions aren't shared.</p>
+
+          <p>Take a look at some common cross-cultural mistakes and see if you can identify the mistake before reading the description:</p>
+          <!-- EXPAT STATS -->
+          <table>
+            <tr>
+              <th>Mistake</th>
+              <th>Explanation</th>
+            </tr>
+            <tr>
+              <td>Jim moves to shake the hand of his new business partner, Fatima; she smiles but doesn't return the gesture.</td>
+              <td>In some Arab cultures, men do not shake a woman's hand unless she offers first; most women won't find it offensive, but it can feel awkward to be left hanging.</td>
+            </tr>
+            <tr>
+              <td>Judy asks her boss if she should submit her latest business proposal. He tells her it looks like she's worked very hard on it; she submits it.</td>
+              <td>In some cultures, direct confrontation is seen as rude. By not answering her question directly, Judy's boss may have been communicating that he didn't think it was ready to be submitted yet.</td>
+            </tr>
+            <tr>
+              <td>Rachel schedules a meeting for 4:30 when the work day in Dubai ends at 5; most people don't show up, and she's upset.</td>
+              <td>Different cultures place different values on work and time; in the West, people tend to place work ahead of their home life, while in other cultures it's perfectly acceptable to refuse an unreasonable demand on the time they should be spending at home with their family.</td>
+            </tr>
+          </table>
+
+          <p>Even if you don't plan on living or working abroad, or even doing any extensive travelling, having intercultural skills and awareness will be invlauable in the workplace, among friends, and in everyday life.
+            Being able to identify and talk about <a href="storti.html">cultural dimensions</a> will help you articulate what's different between your culture and someone elses; and being able to <a href="idi.html">self-assess how you're experiencing another culture</a>
+            will help you know how you can grow and become a better participant in cultures you're less familiar with.</p>
+
+          <img src="../img/cow.png" id="cow" alt="a cow lies in the grass on the side of a suburban road">
+
         </div>
       </div>
 
