--- a/culture/storti.html
+++ b/culture/storti.html
@@ -30,25 +30,39 @@
       <!-- BODY -->
       <div id="main-content">
         <div class="main-body">
-          <img src="../img/culturebanner.PNG" id="storti-banner">
+          <img src="../img/culturebanner.PNG" id="storti-banner" alt="a street in Amman, Jordan with graffiti street art">
+          <h1>Cultural Dimensions</h1>
           <p><strong>Cultures can be confusing.</strong> If you've ever travelled, talked with someone from abroad, or even been to a different part of your city or state, you know that sometimes things "just work different" in different places.</p>
-          <p>These differences aren't always easy to measure or even describe to someone who asks; but author and international worker Craig Storti has outlined some helpful metrics for describing and understanding culture in his book <em>Figuring Foreigners Out</em>. Below are the six main spectrums he describes:</p>
+          <p>These differences aren't always easy to measure or even describe to someone who asks; but author and international worker Craig Storti has outlined some helpful metrics for describing and understanding culture in his book <em>Figuring Foreigners Out</em>.</p>
+          <p>There are six main spectrums:</p>
+          <ul>
+            <li>Sense of Self: Individualism vs. Collectivism</li>
+            <li>Sense of Time: Monochronic vs. Polychronic</li>
+            <li>Communication: Direct vs. Indirect</li>
+            <li>Sense of Authority: Power Distance</li>
+            <li>Locus of Control: Internal vs. External</li>
+            <li>Sense of Values: Universal vs. Particular</li>
+          </ul>
+
+          <p>For the sake of time and clarity, we'll cover the first four here; the final two are important, but they're far more abstract, and these will be the most helpful initially:</p>
 
           <h1>Individualism vs. Collectivism</h1>
           <p>This is possibly the most well-known and widely-discussed form of cultural difference, in part because it is one of the most visible.</p>
           <p>The individualist perspective emphasizes the freedom, value, and self-sufficiency of the smallest unit: the individual. Each person's life is their own, and the freer they are to pursue that, the better—the flourishing of the individual leaves them better able to contribute to the success of society as a whole. Success is measured in personal progress, achievement, and recognition; it is always better to make sure every voice is heard and to consider each individual's position.</p>
           <p>The collectivist perspective, alternatively, emphasizes the flourishing of a group. The smallest unit generally consists of family; the largest might expand all the way into national identity. Since the flourishing of the group means the flourishing of individuals within the group, maintaining a stable group environment is most important—success is measured by harmony and interdependence, and it is always better to consider the feelings of your group as a whole rather than your individual ambitions or thoughts.</p>
 
+          <img src="../img/clock.png" id="clock" alt="a clock">
           <h1>Monochronic vs. Polychronic</h1>
           <p>Have you ever heard someone say they're "running on island time"? Different cultures can have <em>very</em> different concepts of time!</p>
           <p>Monochronic cultures tend to have the most rigid senses of time; arriving to events "on time" is common courtesy, and delivery times are expected to be met (or, better yet, exceeded!) Time is seen as a concrete, finite thing. You've only got 24 hours in a day—use them wisely! Efficiency is key, and the most respectful thing you can do for another is make sure you're not wasting their time.</p>
           <p>On the other hand, polychronic cultures don't view time as a resource—it's something we have decades of, and the best thing we can "do" with it is to use it well. "Well" does not always equal "efficiently", however; times and dates can change, and certain things can be kept waiting. There are too many important things in life to be worried about whether you make it into the office at 8am sharp! There's no such thing as an "interruption"—you respect people by <em>what</em> you do, not how quickly you get it done.</p>
 
           <h1>Verbal vs. Nonverbal Communication</h1>
-          <p>There's a commonly-cited "fact" that up to 80% (some sources say higher) of communication is nonverbal; this dimension, however, isn't just referring to body language. Another phrasing of it might be "direct versus indirect"—sometimes it's not what you say, but what you *don't* say.</p>
+          <p>There's a commonly-cited "fact" that up to 80% (some sources say higher) of communication is nonverbal; this dimension, however, isn't just referring to body language. Another phrasing of it might be "direct versus indirect"—sometimes it's not what you say, but what you <em>don't</em> say.</p>
           <p>Verbal, or direct, communication is fairly simple—it's "telling it like it is," saying what you mean, getting straight to the point. Just like this paragraph.</p>
           <p>In contrast, nonverbal—or indirect—communication relies on implication, inference, and suggestion. Within an in-group, most members will have a common framework or background; less may need to be said to suggest a change or infer a conclusion. Additionally, it's important to focus on strengthening relationships; directly contradicting or critiquing someone might be perceived as aggressive in a way that diminishes the relationship, particularly if it's in front of others.</p>
 
+          <img src="../img/teacher.png" id="teacher" alt="silhouette of a teacher">
           <h1>Power Distance</h1>
           <p>This dimension is where phrases like "respect your elders!" or "okay, boomer" become relevant; power distance refers to the perceived social "distance" between those in authority and those under them.</p>
           <p>Cultures with a high power distance place great importance on authority; it's disrespectful (sometimes in the extreme) to express disagreement with someone in power, particularly parents, bosses, and elders. Hierarchy is the natural order of things; those in power fulfill their duties, and those underneath them fulfill theirs—no one should underperform, but neither is it expected of anyone to take initiative.</p>
