--- a/culture/index.html
+++ b/culture/index.html
@@ -61,7 +61,7 @@
             Being able to identify and talk about <a href="storti.html">cultural dimensions</a> will help you articulate what's different between your culture and someone elses; and being able to <a href="idi.html">self-assess how you're experiencing another culture</a>
             will help you know how you can grow and become a better participant in cultures you're less familiar with.</p>
 
-          <img src="../img/cow.png" id="cow" alt="a cow lies in the grass on the side of a suburban road">
+          <img src="../img/cow.PNG" id="cow" alt="a cow lies in the grass on the side of a suburban road">
 
         </div>
       </div>
