updated to meet W3 standards

--- a/culture/idi.html
+++ b/culture/idi.html
@@ -53,9 +53,9 @@
           <p>Those in the Adaptation stage not only understand difference but live it. No matter which culture they are in, they are able to participate meaningfully and authentically—they're no longer "playing at" fitting into the new culture, and they've moved beyond just appreciating it to being able to adapt their values, actions, and contributions to be culturally appropriate and constructive.</p>
           <p>There is always room to grow—a new culture may always be "new," relatively—but those in this stage have a deep understanding of where they fit into their environment and where they are heading.</p>
 
-          <img src="../img/idichart.png" id="idi-chart">
+          <img src="../img/idichart.png" id="idi-chart" alt="arrow pointing right with each stage progressing from left to right">
         </div>
       </div>
-
+    </div>
     </body>
 </html>
