zen garden overhaul

--- a/gcsp/service.html
+++ b/gcsp/service.html
@@ -18,9 +18,13 @@
         <h1>kimberly horton</h1>
         <h2>Grand Challenge Scholars Program</h2>
         <a href="../index.html"><div class="sidebar-link">Home</div></a>
-        <a href="gcsp.html"><div class="sidebar-link sidebar-current">GCSP</div></a>
-        <a href="problem.html"><div class="sub sidebar-link">The Problem</div></a>
-        <a href="software.html"><div class="sub sidebar-link">The Software</div></a>
+        <a href="gcsp.html"><div class="sidebar-link">GCSP</div></a>
+        <a href="research.html"><div class="sub sidebar-link">Research</div></a>
+        <a href="curriculum.html"><div class="sub sidebar-link">Curriculum</div></a>
+        <a href="service.html"><div class="sub sidebar-link sidebar-current">Service Learning</div></a>
+        <a href="entrepreneurship.html"><div class="sub sidebar-link">Entrepreneurship</div></a>
+        <a href="multicultural.html"><div class="sub sidebar-link">Multicultural Experience</div></a>
+        <a href="faith.html"><div class="sub sidebar-link">Faith Integration</div></a>
       </div>
 
       <div id="main-content">
