--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="gcsp/gcsp.html"><div class="sidebar-link">GCSP</div></a>
         <h2>CSIS304 Projects</h2>
         <a href="culture/index.html"><div class="sidebar-link">1: Culture</div></a>
-        <a href="zen/index.html"><div class="sidebar-link wip">2: Zen Garden</div></a>
+        <a href="zen/index.html"><div class="sidebar-link">2: Zen Garden</div></a>
       </div>
 
       <!-- BODY -->
