--- a/dnd/index.html
+++ b/dnd/index.html
@@ -116,8 +116,10 @@
       <div id="charClass"></div>
       <div id="charSpells"><h2>Spells</h2></div>
       <div id="charWeapons"></div>
-      <p><em>Coming soon: weapons, class features, and more specialized magic components
+      <div id="comingSoon">
+        <p><em>Coming soon: weapons, class features, and more specialized magic components
         (i.e. Ki points, Sorcery points, spell books, etc.)</em></p>
+      </div>
     </div>
   </body>
 </html>
