--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2>CSIS304 Projects</h2>
         <a href="culture/index.html"><div class="sidebar-link">1: Culture</div></a>
         <a href="zenGarden/index.html"><div class="sidebar-link">2: Zen Garden</div></a>
-        <a href="/dnd/"><div class="sidebar-link wip">3: D&D Combat</div></a>
+        <a href="/dnd/"><div class="sidebar-link">3: D&D Combat</div></a>
       </div>
 
       <!-- BODY -->
