--- a/gcsp/curriculum.html
+++ b/gcsp/curriculum.html
@@ -30,22 +30,38 @@
 
       <div id="main-content">
         <div class="main-body">
-          <h1>The Problem</h1>
-          <img id="peru-tapstand" src="../img/failed-tapstand-peru.png" alt="a failed tapstand built in peru">
-          <p><em>There's something rotten in the state of the humanitarian sector.</em> And it isn't the hearts of
-          the men and women working tirelessly to find solutions for problems like poor water quality or
-          sanitation--through no fault of their own, some solutions haven't stayed permanent.</p>
+          <h1>Interdisciplinary Curriculum</h1>
 
-          <p>Projects like digging a well in an impoverished African village or building latrines for a
-          small community in Latin America can be life-changing for the people affected--but too often we count
-          the installation a success without checking in on the aftermath; and we're finding that our
-          solutions aren't as sustainable as we'd hoped. Pictured to the right is a water tapstand installed
-          in Peru--unused and beginning to corrode. There are countless stories of similarly unused projects:
-          wells dried up, sewage systems untouched, community maintenance groups disbanded.</p>
+          <h2>George Fox Honors Program</h2>
+            <p>Easily one of the most influential aspects of my education, the
+            <a href="https://www.georgefox.edu/honors-program/index.html">George Fox Honors Program</a> is a
+            Great Books curriculum that has walked my graduating class through four years of texts that
+            have shaped history. Topics range from philosophy to economics, from Homer's <em>Iliad</em>
+            to Sartre's <em>Existentialism is a Humanism</em>, and we discuss a different text twice a week
+            in a rountable, Socratic format.</p>
+            <p>Now, while picking up a copy of Augustine or Descartes is usually not a direct map onto engineering
+            or research work, the skills I have picked up over the course of this program are ones
+            I will always find invaluable: I've learned to contribute well to group discussions,
+            to think critically about nuanced ideas, and to hold different opinions and schools of thought
+            in my head and discuss them articulately. In global humanitarian work,
+            it is a guarentee that you will have interactions with people different than yourself. I believe
+            it is imperative that we be able to have meaningful, progressive conversations about the
+            nuanced issues we work with in this field, and my time in the Honors Program has given me a
+            passion for thoughtful communication.
 
-          <p><em>What's going wrong?</em> There's not an easy answer--each community's story is different,
-          and so are the factors affecting the sustainability of new developments. That's where the process of
-          <strong>Iterative Factor-Mapping and Learning</strong> (IFML) comes in.</p>
+          <h2>Computer Science</h2>
+            <p>The spectrum of experience I've had during my time in George Fox's Computer Science department
+            is incredibly wide and absolutely invaluable. The courses have fairly standard content: data structures,
+            design patterns, databases; but what's really made the experience has been our faculty.</p>
+            <p>I wouldn't have switched into a CSIS major without the <strike>pressure</strike> encouragement
+            of multiple professors in the department--and once I switched, the care they had for me personally
+            didn't go away just because I'd 'converted'. I've felt like I've had people to go to for advice
+            every step of the way, and I can honestly say I've never once doubted my decision to switch.</p>
+
+          <h2>Engineering</h2>
+
+          <h2>Music</h2>
+
         </div>
       </div>
     </div>
