major content update

--- a/gcsp/curriculum.html
+++ b/gcsp/curriculum.html
@@ -59,8 +59,22 @@
             every step of the way, and I can honestly say I've never once doubted my decision to switch.</p>
 
           <h2>Engineering</h2>
+          <p><em>[Servant, Senior Design, and EYS; the interdisciplinary aspects]</em></p>
 
           <h2>Music</h2>
+            <p>Though there aren't many obvious ties to my computer and engineering work, talking about
+              my education without mentioning music would make this section entirely incomplete.</p>
+            <p>I began my education as a Music Composition major; I love to make music, and I love the
+              creativity and problem-solving needed to weave musical lines together. I actually loved my Theory
+              classes for the same reason I loved my programming ones - I had to think, and I had to use
+              nearly every part of my brain to do it. I'm a soprano and love to sing, and I also play a fairly
+              wide repertoire of instruments: flute, tuba, euphonium/baritone, guitar, and a smattering of
+              saxophone, piano, and bass drum.</p>
+            <p>Should you want to hear me wax poetic about music and why I love it, you can read <a href="http://kimberlyhorton.com/why-do-you-love-music/">
+              this old blog post</a> I wrote about that very subject, back before I'd ever switched majors; but despite
+              my change in career trajectory, everything there rings true. <em>If I don't study music, I am
+              not myself.</em> There's a lot more to life than lines of code running across my screen,
+              and for that I am truly grateful.</p>
 
         </div>
       </div>
