--- a/gcsp/entrepreneurship.html
+++ b/gcsp/entrepreneurship.html
@@ -29,15 +29,10 @@
 
       <div id="main-content">
         <div class="main-body">
-          <h1>The Software</h1>
-          <p>Planned Features:</p>
-            <ul>
-              <li>Graphical representation of feedback loops and factor influence & dependence</li>
-              <li>Ranked analysis of balanced and reinforcing loops</li>
-              <li>Intuitive, internationalized user displays</li>
-            </ul>
-
-          <p>Screenshots Coming Soon!</p>
+          <h1>Entrepreneurial Experience</h1>
+          <p><em>[well, Jeff is literally launching a business that uses the capabilities
+            of the software we're building so that's definitely entrepreneurial right]<br>
+          <br>[we'll figure out what to put here later, I'm not 100% sure how to explain this]</em></p>
         </div>
       </div>
     </div>
