--- a/gcsp/faith.html
+++ b/gcsp/faith.html
@@ -29,15 +29,12 @@
 
       <div id="main-content">
         <div class="main-body">
-          <h1>The Software</h1>
-          <p>Planned Features:</p>
-            <ul>
-              <li>Graphical representation of feedback loops and factor influence & dependence</li>
-              <li>Ranked analysis of balanced and reinforcing loops</li>
-              <li>Intuitive, internationalized user displays</li>
-            </ul>
-
-          <p>Screenshots Coming Soon!</p>
+          <h1>Faith Integration</h1>
+            <h2>What I Believe</h2>
+              <em>[very brief testimony/explanation of the gospel in a hopefully not-preachy/unprofessional way]</em><br><br>
+              <em>[possibly some information about how my faith's transformed through college? nothing too sappy though.]</em>
+            <h2>What That Means</h2>
+              <em>[expounding on my mission statement: "I believe [Christ's] call to serve the poor and underprivileged was meant to be taken seriously."]</em>
         </div>
       </div>
     </div>
