--- a/gcsp/gcsp.html
+++ b/gcsp/gcsp.html
@@ -33,6 +33,29 @@
       <!-- BODY -->
       <div id="main-content">
         <div class="main-body">
+          <h1>Grand Challenge Scholars Program | An Overview</h1>
+          <p>The Grand Challenge Scholars Program (GCSP) is an initiative for students in K-12 and
+            engineering schools to engage with the National Academy of Engineering's (NAE) 14 "grand challenges,"
+            or goals that the NAE recognized as necessary to deliver their vision, <strong>“Continuation of life on
+            the planet, making our world more sustainable, secure, healthy, and joyful.”</strong></p>
+          <p>As a student in the GCSP, I'm doing work towards two of these challenges that fulfills the key competencies of the program:
+            academic ("talent"), multicultural, entrepreneurial, multidisciplinary, and socially conscientious. For more
+            details about my research and the different competencies that have gone into it, check out the links in the sidebar;
+            and if you want to learn a little bit more about who I am, keep scrolling!</p>
+            <br>
+          <hr>
+          <h1>About Me</h1>
+          <p>Hey there! My name is Kimberly, and I'm a senior Computer Science major at George Fox University.</p>
+          <p>The first thing you should know about me is that <strong>I like to keep myself busy</strong>; over the course of my high school years, I’ve been on my school’s
+            parliamentary debate team, an actress in multiple school productions, a soundboard runner at my church,
+            and taught myself tuba, guitar, saxophone, and euphonium. In university, I’ve been in Drumline, Pep Band,
+            George Fox’s nationally-recognized Symphonic Band (playing the euphonium & tuba), multiple choirs,
+            and am a student in the university’s <a href="https://www.georgefox.edu/honors-program/index.html">George Fox Honors Program</a>,
+            a Socratic seminar-style Great Books program.</p>
+          <p><strong>My home is international.</strong> I’m an alumnus of <a href="http://www.dalat.org/">Dalat International School</a>
+            in Penang, Malaysia, where I attended middle school and high school; and for the first three months of 2020, I lived in Amman, Jordan
+            as a student in the CCCU's Middle East Studies Program.</p>
+          <p><em>[to be continued - this section is a work in progress!]</em></p>
           <!-- Mission Statement -->
           <table id="mission">
             <tr>
@@ -44,23 +67,6 @@
               </td>
             <td><img id="profile-pic" src="../img/kimberly.jpg" alt="kimberly smiling in front of an Amman, Jordan cityscape behind a window"></td>
           </tr></table>
-              <br>
-          <!-- Water & Learning Descriptions -->
-          <table id="waterAndLearning">
-            <tr>
-              <td>
-                <img id="water" src="../img/water.png" alt="icon of hands reaching for a water droplet">
-                <h1>Provide Access to Clean Water</h1>
-                <p><strong>Lack of clean water is responsible for more deaths in the world than war.</strong> About 1 out of every 6 people living today do not have adequate access to water, and more than double that number lack basic sanitation, for which water is needed. In some countries, half the population does not have access to safe drinking water, and hence is afflicted with poor health. By some estimates, each day nearly 5,000 children worldwide die from diarrhea-related diseases, a toll that would drop dramatically if sufficient water for sanitation was available.</p>
-              </td>
-              <td>
-                <img id="learning" src="../img/learning.png" alt="silhouette of a head with a gear-cog inside">
-                <h1>Advance Personalized Learning</h1>
-                <p>Throughout the educational system, teaching has traditionally followed a one-size-fits-all approach to learning, with a single set of instructions provided identically to everybody in a given class, regardless of differences in aptitude or interest. Similar inflexibility has persisted in adult education programs that ignore differences in age, cultural background, occupation, and level of motivation.</p>
-                <p>In recent years, a growing appreciation of individual preferences and aptitudes has led toward more “personalized learning,” in which instruction is tailored to a student’s individual needs. Personal learning approaches range from modules that students can master at their own pace to computer programs designed to match the way it presents content with a learner’s personality.</p>
-              </td>
-            </tr>
-          </table>
 
         </div>
 
