--- a/gcsp/multicultural.html
+++ b/gcsp/multicultural.html
@@ -29,15 +29,28 @@
 
       <div id="main-content">
         <div class="main-body">
-          <h1>The Software</h1>
-          <p>Planned Features:</p>
-            <ul>
-              <li>Graphical representation of feedback loops and factor influence & dependence</li>
-              <li>Ranked analysis of balanced and reinforcing loops</li>
-              <li>Intuitive, internationalized user displays</li>
-            </ul>
-
-          <p>Screenshots Coming Soon!</p>
+          <h1>Multicultural Experience</h1>
+          <h2>Malaysia</h2>
+            <p>Perhaps my most "multicultural" experience is one entirely disconnected from
+              my university education; I grew up on a small island called Penang, off the Western
+              coast of Peninsular Malaysia.</p>
+            <p>Penang is one of the greatest examples I can think of (though I'm a little biased)
+              of a cultural melting pot. The population of Malaysia consists primarily of ethnic
+              Chinese and Indian descent, with more Indigenous peoples living in the rural areas,
+              and the cultures intermingle in everything from the tastes of the food to the
+              sounds of the temples, mosques, and monasteries across the island. We get tourists,
+              businessmen and their families, missionaries, and everyone in between; my high school
+              graduating class had 13 different nationalities alone.</p>
+            <p>I have both the blessing and the curse of having grown up in such a diverse place;
+              it's a blessing because I learned to navigate cultures and customs intuitively, and
+              a curse because it makes explaining those intuitions to others a little difficult.
+              <em>You just - you can't say that! I can't explain why, you just don't!</em></p>
+            <p><em>[this section is a work in progress - check back in later!]</em></p>
+          <h2>Study Abroad: Middle East Studies Program</h2>
+            <p><em>[todo: copy-paste some content from my many written reflections]</em></p>
+          <h2>Software Work | Wycliffe Associates</h2>
+          <p><em>[details about how we had to take multicultural perspectives into account with
+            the software I helped develop at Wycliffe]</em></p>
         </div>
       </div>
     </div>
