--- a/gcsp/research.html
+++ b/gcsp/research.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <link rel="stylesheet" href="../global.css">
+    <link rel="stylesheet" href="research.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="Grand Challenge Scholars Program"
@@ -29,15 +30,22 @@
 
       <div id="main-content">
         <div class="main-body">
-          <h1>The Software</h1>
-          <p>Planned Features:</p>
-            <ul>
-              <li>Graphical representation of feedback loops and factor influence & dependence</li>
-              <li>Ranked analysis of balanced and reinforcing loops</li>
-              <li>Intuitive, internationalized user displays</li>
-            </ul>
-
-          <p>Screenshots Coming Soon!</p>
+          <!-- Water & Learning Descriptions -->
+          <table id="waterAndLearning">
+            <tr>
+              <td>
+                <img id="water" src="../img/water.png" alt="icon of hands reaching for a water droplet">
+                <h1>Provide Access to Clean Water</h1>
+                <p><strong>Lack of clean water is responsible for more deaths in the world than war.</strong> About 1 out of every 6 people living today do not have adequate access to water, and more than double that number lack basic sanitation, for which water is needed. In some countries, half the population does not have access to safe drinking water, and hence is afflicted with poor health. By some estimates, each day nearly 5,000 children worldwide die from diarrhea-related diseases, a toll that would drop dramatically if sufficient water for sanitation was available.</p>
+              </td>
+              <td>
+                <img id="learning" src="../img/learning.png" alt="silhouette of a head with a gear-cog inside">
+                <h1>Advance Personalized Learning</h1>
+                <p>Throughout the educational system, teaching has traditionally followed a one-size-fits-all approach to learning, with a single set of instructions provided identically to everybody in a given class, regardless of differences in aptitude or interest. Similar inflexibility has persisted in adult education programs that ignore differences in age, cultural background, occupation, and level of motivation.</p>
+                <p>In recent years, a growing appreciation of individual preferences and aptitudes has led toward more “personalized learning,” in which instruction is tailored to a student’s individual needs. Personal learning approaches range from modules that students can master at their own pace to computer programs designed to match the way it presents content with a learner’s personality.</p>
+              </td>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
