--- a/gcsp/service.html
+++ b/gcsp/service.html
@@ -29,15 +29,15 @@
 
       <div id="main-content">
         <div class="main-body">
-          <h1>The Software</h1>
-          <p>Planned Features:</p>
-            <ul>
-              <li>Graphical representation of feedback loops and factor influence & dependence</li>
-              <li>Ranked analysis of balanced and reinforcing loops</li>
-              <li>Intuitive, internationalized user displays</li>
-            </ul>
-
-          <p>Screenshots Coming Soon!</p>
+          <h1>Service</h1>
+          <h2>21Wilberforce Associate</h2>
+          [I'm volunteering for 21Wilberforce, a Christian organization in D.C. that advocates
+          for international religious freedom, by helping their main tech guy with Wordpress and
+          other digital tools.]
+          <h2>Wycliffe Associates</h2>
+          [I count this one as an internship a lot, but it was technically unpaid, so - I
+          helped develop Bible translation software for international use, specifically for
+          people without a written language (so oral translation).]
         </div>
       </div>
     </div>
