--- a/gcsp/research.html
+++ b/gcsp/research.html
@@ -30,7 +30,21 @@
 
       <div id="main-content">
         <div class="main-body">
+          <h1>Research</h1>
+          <h2>The Problem</h2>
+          <p><em>[content about issues with sustianable development]</em></p>
+
+          <h2>The Software</h2>
+            <p>Planned Features:</p>
+            <ul>
+              <li>Graphical representation of feedback loops and factor influence & dependence</li>
+              <li>Ranked analysis of balanced and reinforcing loops</li>
+              <li>Intuitive, internationalized user displays</li>
+            </ul>
+          <p>Screenshots Coming Soon!</p>
+
           <!-- Water & Learning Descriptions -->
+          <h2>Grand Challenges to Address</h2>
           <table id="waterAndLearning">
             <tr>
               <td>
