content update for research

--- a/gcsp/multicultural.html
+++ b/gcsp/multicultural.html
@@ -43,12 +43,11 @@
               graduating class had 13 different nationalities alone.</p>
             <p>I have both the blessing and the curse of having grown up in such a diverse place;
               it's a blessing because I learned to navigate cultures and customs intuitively, and
-              a curse because it makes explaining those intuitions to others a little difficult.
-              <em>You just - you can't say that! I can't explain why, you just don't!</em></p>
+              a curse because it makes explaining those intuitions to others a little difficult.</p>
             <p><em>[this section is a work in progress - check back in later!]</em></p>
           <h2>Study Abroad: Middle East Studies Program</h2>
             <p><em>[todo: copy-paste some content from my many written reflections]</em></p>
-          <h2>Software Work | Wycliffe Associates</h2>
+          <h2>Software Work: Wycliffe Associates</h2>
           <p><em>[details about how we had to take multicultural perspectives into account with
             the software I helped develop at Wycliffe]</em></p>
         </div>
