--- a/gcsp/research.html
+++ b/gcsp/research.html
@@ -32,7 +32,17 @@
         <div class="main-body">
           <h1>Research</h1>
           <h2>The Problem</h2>
-          <p><em>[content about issues with sustianable development]</em></p>
+          <p>Sustainable development is a huge priority in the humanitarian sector; but often, making
+          development sustainable involves a lot more foresight than expected. When communities gain
+          new developments like wells or a septic system, sometimes they're not maintained - and we
+          want to know why and prevent that from happening.</p>
+          <p>Enter factor-mapping - a method of analyzing how factors within a community impact one another
+          and the sustainability of a new or improved area; in the case of my research, that's specifically
+          water, santation, and hygiene (WaSH). It's being used to predict where developments may experience
+          problems or bottlenecks in communities where work is being done.</p>
+          <p>There's a glaring problem, though: the current process, when done by hand, can take <em>months</em>
+          to do the math for depending on time constraints and access to calculation tools.</p>
+          <p>Enter: the power of computer software.</p>
 
           <h2>The Software</h2>
             <p>Planned Features:</p>
