--- a/dailyReadings/index.html
+++ b/dailyReadings/index.html
@@ -10,6 +10,7 @@
       name="Daily Lectionary Readings"
       content="HTML & CSS webpage hosted on GitHub Pages"
     />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
