--- a/dailyReadings/index.html
+++ b/dailyReadings/index.html
@@ -5,6 +5,7 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <link rel="stylesheet" href="../global.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="datepicker.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="Daily Lectionary Readings"
@@ -24,6 +25,7 @@
       <!-- SIDEBAR -->
       <div id="sidebar">
         <h1 id="title">daily lectionary readings</h1>
+        <h2 id="dateText"></h2>
         <h2 id="dateTitle"></h2>
         <a href="/"><div class="sidebar-link sidebar-current">Home</div></a>
       </div>
@@ -33,5 +35,7 @@
         <div class="main-body" id="readings">
         </div>
       </div>
+
+      <script src="datepicker.min.js"></script>
     </body>
 </html>
