--- a/dailyReadings/index.html
+++ b/dailyReadings/index.html
@@ -25,7 +25,8 @@
         <h1 id="title">daily lectionary readings</h1>
         <h2 id="dateText"></h2>
         <h2 id="dateTitle"></h2>
-        <a href="/"><div class="sidebar-link sidebar-current">Home</div></a>
+        <a href="index.html"><div class="sidebar-link sidebar-current">Readings</div></a>
+        <a href="about.html"><div class="sidebar-link">About</div></a>
       </div>
 
       <!-- BODY -->
