--- a/dailyReadings/index.html
+++ b/dailyReadings/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="Daily Lectionary Readings"
@@ -23,8 +25,8 @@
       <!-- SIDEBAR -->
       <div id="sidebar">
         <h1 id="title">daily lectionary readings</h1>
-        <h2 id="dateText"></h2>
-        <h2 id="dateTitle"></h2>
+        <div id="dateText"></div>
+        <div id="dateTitle"></div>
         <a href="index.html"><div class="sidebar-link sidebar-current">Readings</div></a>
         <a href="about.html"><div class="sidebar-link">About</div></a>
       </div>
