minor text tweaks

--- a/gcsp/entrepreneurship.html
+++ b/gcsp/entrepreneurship.html
@@ -30,9 +30,10 @@
       <div id="main-content">
         <div class="main-body">
           <h1>Entrepreneurial Experience</h1>
-          <p><em>[well, Jeff is literally launching a business that uses the capabilities
-            of the software we're building so that's definitely entrepreneurial right]<br>
-          <br>[we'll figure out what to put here later, I'm not 100% sure how to explain this]</em></p>
+          <p>This software is currently being developed for an entrepreneurial venture;
+          my advisor and a colleague of his are working to take their factor-mapping
+          process to as many people as they can, and this software will make it possible
+          for them to reach </p>
         </div>
       </div>
     </div>
